--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_card_swiper: ^7.0.0
-  dart_nostr: ^4.0.0
+  # dart_nostr: ^4.0.0  # Temporarily commented due to bip340 conflict
+  ndk: ^0.4.0
   web_socket_channel: ^3.0.0
   pointycastle: ^3.7.3
   cached_network_image: ^3.3.1
@@ -45,7 +46,7 @@ dependencies:
   shared_preferences: ^2.2.3
   crypto: ^3.0.3
   convert: ^3.1.1
-  bip340: ^0.1.0
+  bip340: ^0.3.0
   cryptography: ^2.7.0
 
 dev_dependencies:
